refactor: updated .net version to .net6 and updated packages dependencies. Removed unused dependencies and using. Refactored with null safety accordingly to .net 6 warnings

--- a/Pizza.Management.System/src/Domain/Domain.csproj
+++ b/Pizza.Management.System/src/Domain/Domain.csproj
@@ -1,13 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <RootNamespace>Pizza.Management.Domain</RootNamespace>
-    <AssemblyName>Pizza.Management.Domain</AssemblyName>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
-  </ItemGroup>
 
 </Project>
